--- a/中心与焦点.html
+++ b/中心与焦点.html
@@ -17,7 +17,7 @@ svg{
 <body>
 <svg width="375" height="667">
 				<defs>
-					<radialGradient id="Gradient" cx="0.5" cy="0.5" r="0.5" fx="0.25" fy="0.25">  
+					<radialGradient id="Gradient" cx="0.5" cy="0.5" r="0.5" fx="0.25" fy="0.25" spreadMethod="reflect">  
 						<stop offset="0%" stop-color="red"></stop>
 						<stop offset="100%" stop-color="blue"></stop>
 					</radialGradient>		
