--- a/SVG动画/同步动画.html
+++ b/SVG动画/同步动画.html
@@ -5,35 +5,18 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <title></title>
 <style>
-svg {
-				position: fixed;
-				left: calc((100% - 300px) / 2);
-}
 </style>
 </head>
 <body>
-<svg width="300" height="200" xmlns="http://www.w3.org/2000/svg">
-				<!-- Created with Method Draw - http://github.com/duopixel/Method-Draw/ -->
-
-				<g>
-				<title>background</title>
-				<rect fill="#fff" id="canvas_background" height="202" width="302" y="-1" x="-1"/>
-				</g>
-				<g>
-				<title>Layer 1</title>
-				<g transform="rotate(-90 223,-45) " id="svg_6">
-				<ellipse ry="26.5" rx="26" id="svg_1" cy="77" cx="225" fill-opacity="null" stroke-opacity="null" stroke-width="null" stroke="null" fill="green"/>
-				<rect id="svg_5" height="89" width="4" y="-45.5" x="223" stroke-width="null" stroke="#7f0000" fill="#7f0000"/>
-				</g>
-				<g id="svg_9">
-				<ellipse ry="26.5" rx="26" id="svg_7" cy="149" cx="150" fill-opacity="null" stroke-opacity="null" stroke-width="null" stroke="null" fill="#ff0000"/>
-				<rect id="svg_8" height="89" width="4" y="26.5" x="148" stroke-width="null" stroke="#7f0000" fill="#ff0000"/>
-				</g>
-				<g id="svg_12">
-				<ellipse ry="26.5" rx="26" id="svg_10" cy="149" cx="150" fill-opacity="null" stroke-opacity="null" stroke-width="null" stroke="null" fill="#00007f"/>
-				<rect id="svg_11" height="89" width="4" y="26.5" x="148" stroke-width="null" stroke="#7f0000" fill="#00007f"/>
-				</g>
-				</g>
-</svg>
+	<svg>
+		<circle cx="60" cy="60" r="30" style="fill:#f9f;stroke:gray">
+			<animate id="c1" attributeName="r" attributeType="XML" begin="0s" dur="3s" from="30" to="10" fill="freeze"></animate>
+		</circle>
+		<circle cx="120" cy="60" r="10" style="fill:#9f9;stroke:gray">
+		<!--	<animate attributeName="r" attributeType="XML" from="10" to="30" begin="c1.end" dur="1s" fill="freeze"></animate>-->
+		<!--	<animate attributeName="r" attributeType="XML" from="10" to="30" begin="c1.begin+1.25s" dur="9s" end="5" fill="freeze"></animate>-->
+		<animate attributeName="r" attributeType="XML" from="10" to="30" begin="1s" dur="9s" end="c1.end" fill="freeze"></animate>
+		</circle>
+	</svg>
 </body>
 </html>
